--- a/UI/index.html
+++ b/UI/index.html
@@ -12,12 +12,23 @@
   <header>
     <div class="container">
       <nav class="nav">
-        <a href="./" class="nav-logo">AM</a> 
+    	<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/find-a car">Find a car</a></li>
+        		<li><a href="/post-ad">Advertise a car</a></li>
+             <li><a href="/contacts">Contacts</a></li>
+            <li><a href="/about">About</a></li>
+    		</ul>
       </nav>
     </div>
   </header>
   
   <main></main>
   <footer>
+  	<ul>
+        		<li><a href="mailto:luqmansani99@gmail.com">email</a></li>
+        		<li><a href="https://github.com/FirstQuadrantte">github.com/FirstQuadrantte</a></li>
+			</ul>
+  </footer>
 </body>
 </html>
