--- a/UI/index.html
+++ b/UI/index.html
@@ -6,29 +6,38 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/styles.css">
   <title> Auto Mart </title>
+<link rel="stylesheet" href="stylesheet.css">
 </head>
-
 <body>
   <header>
     <div class="container">
+      <div class="header-left">
+       <div class="logo" href="#">AutoMart</div>   
+      </div>
       <nav class="nav">
     	<ul>
-        		<li><a href="/">Home</a></li>
+        		<li><a href="#">Home</a></li>
 	        	<li><a href="/find-a car">Find a car</a></li>
         		<li><a href="/post-ad">Advertise a car</a></li>
-             <li><a href="/contacts">Contacts</a></li>
-            <li><a href="/about">About</a></li>
-    		</ul>
+			<li><a href="/new-cars">New Cars</a></li>
+			<li><a href="/old-cars">Old Cars</a></li>
+            	        <li><a href="/about">About</a></li>
+    	</ul>
       </nav>
     </div>
-  </header>
-  
-  <main></main>
+  </header> 
+<div class="top-wrapper">
+    <div class="container">
+<h3>Auto Mart is an online marketplace for automobiles of diverse makes, model or body type.</h3>
+<h3> With the aid of this platform , users can sell their cars or buy from trusted dealerships or private sellers.</h3>
+    </div>
+   </div>
   <footer>
-  	<ul>
-        		<li><a href="mailto:luqmansani99@gmail.com">email</a></li>
-        		<li><a href="https://github.com/FirstQuadrantte">github.com/FirstQuadrantte</a></li>
-			</ul>
-  </footer>
+  <!--	<ul>
+       		<li><a href="mailto:luqmansani99@gmail.com">email</a></li>     				
+	<li><a href="https://github.com/FirstQuadrantte">github.com/FirstQuadrantte</a></li>		
+</ul>
+ -->
+ </footer>
 </body>
 </html>
